@@ -23,7 +23,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'org.apache.commons:commons-collections4:4.5.0'
     implementation ('org.apache.commons:commons-dbcp2:2.13.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
@@ -31,9 +31,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.6.0.24.10'
-    implementation 'org.springframework:spring-jdbc:6.1.15'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
+    implementation 'org.springframework:spring-jdbc:6.2.8'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
