@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="main" class="edu.mcw.rgd.Main">
-        <property name="version" value="Cellosaurus pipeline -- build Jan 03, 2025" />
+        <property name="version" value="Cellosaurus pipeline -- build Jun 30, 2025" />
         <property name="sourcePipeline" value="CELLOSAURUS" />
         <property name="oboFile" value="https://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo"/>
         <property name="parser" ref="parser"/>
@@ -168,6 +168,10 @@
                 <entry key="Abeomics" value="155"/>
                 <entry key="RIKEN_BRC_EPD" value="156"/>
                 <entry key="Genomeditech" value="157"/>
+                <entry key="GenScript" value="161"/>
+                <entry key="FANTOM5_SSTAR" value="162"/>
+                <entry key="InvivoGen" value="163"/>
+                <entry key="Evercyte" value="164"/>
             </map>
         </property>
     </bean>
