@@ -1,3 +1,6 @@
+Jun 30, 2025
+  added handling of xrefs: Evercyte, InvivoGen, FANTOM5_SSTAR, GenScript
+
 Jan 03, 2025
   fixed parser to handle some unexpected data
 
